--- a/CSS_Lekcja3/index.html
+++ b/CSS_Lekcja3/index.html
@@ -16,7 +16,7 @@
         <div class="mecz">tu jest mecz</div>
     </section>
     <main>
-        <h2>Reprezentacja eZDAMinu</h2>
+        <h2>Reprezentacja ezdamin.pl</h2>
     </main>
     <section id="lewy">
         <p>Podaj pozycję zawodników (1-bramkarze, 2-obrońcy, 3-pomocnicy, 4-napastnicy)</p>
@@ -25,10 +25,10 @@
             <button type="submit">Sprawdź</button>
         </form>
         <ul>
-            <li>EL_GOŁ4BEK</li>
-            <li>Karol Krawczyk</li>
+            <li>undefined</li>
             <li>Diruss</li>
             <li>Yastor</li>
+            <li></li>
         </ul>
     </section>
     <section id="prawy">
