add blank files to edit

--- a/CSS_Lekcja8/rozwiazanie/index.html
+++ b/CSS_Lekcja8/rozwiazanie/index.html
@@ -21,22 +21,24 @@
     <main>
         <h2>Reprezentacja ezdamin.pl</h2>
     </main>
-    <section id="lewy">
-        <p>Podaj pozycję zawodników (1-bramkarze, 2-obrońcy, 3-pomocnicy, 4-napastnicy)</p>
-        <form action="" method="post">
-            <input type="number" name="" id="">
-            <button type="submit">Sprawdź</button>
-        </form>
-        <ul>
-            <li>undefined</li>
-            <li>Diruss</li>
-            <li>Yastor</li>
-            <li></li>
-        </ul>
-    </section>
-    <section id="prawy">
-        <img src="zad1.png" alt="piłkarz">
-        <p>Autor: 000000000000</p>
+    <section id="kontener">
+        <section id="lewy">
+            <p>Podaj pozycję zawodników (1-bramkarze, 2-obrońcy, 3-pomocnicy, 4-napastnicy)</p>
+            <form action="" method="post">
+                <input type="number" name="" id="">
+                <button type="submit">Sprawdź</button>
+            </form>
+            <ul>
+                <li>undefined</li>
+                <li>Diruss</li>
+                <li>Yastor</li>
+                <li></li>
+            </ul>
+        </section>
+        <section id="prawy">
+            <img src="zad1.png" alt="piłkarz">
+            <p>Autor: 000000000000</p>
+        </section>
     </section>
     
 </body>
