--- a/JS_Lekcja3/rozwiazanie/index.html
+++ b/JS_Lekcja3/rozwiazanie/index.html
@@ -39,4 +39,23 @@
         <p>Stronę opracował: 00000000000</p>
     </footer>
 </body>
+<script>
+    function oblicz() {
+        let rodzaj = document.getElementById("rodzaj").value;
+        let ilosc = document.getElementById("ilosc").value;
+        let koszt = 0;
+        if (rodzaj == 1) {
+            koszt = ilosc * 4;
+        }
+        if (rodzaj == 2) {
+            koszt = ilosc * 3.5;
+        }
+        if (rodzaj != 1 && rodzaj != 2) {
+            koszt = 0;
+        }
+
+        document.getElementById("wynik").innerHTML = "koszt paliwa: " + koszt + " zł";
+    }
+    
+</script>
 </html>
